Prometheus-operator/alertmanager/dd_webhook-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: dd_webhook
  name: dd_webhook
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dd_webhook
  template:
    metadata:
      labels:
        app: dd_webhook
    spec:
      containers:
      - image: timonwong/prometheus-webhook-dingtalk
        name: dd_webhook
        ports:
        - containerPort: 8060
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
            
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: dd_webhook
  name: dd_webhook
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 8060
    targetPort: http
  selector:
    app: dd_webhook
